--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>Title</title>
+    <title>My calculator</title>
 </head>
 <body>
     <h1>Your Calculation Made EASY !!!!</h1>
